update readme.md and swagger.json
